fix: dynamic version from endpoint, opt/ in install.sh, CI opt/ test
- Version display now fetches from nanobrew.trilok.ai/version (cached)
- Falls back to compile-time VERSION (0.1.062) if cache miss
- install.sh: add opt/, db/, locks/ to mkdir
- CI: add opt/ directory smoke test on macOS and Linux

Generated with AI

Co-Authored-By: AI <ai@example.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,12 @@ jobs:
       - name: Smoke test
         run: ./zig-out/bin/nb help
 
+      - name: Test init creates opt/ directory
+        run: |
+          sudo ./zig-out/bin/nb init
+          test -d /opt/nanobrew/prefix/opt || (echo "FAIL: opt/ directory not created by nb init" && exit 1)
+          echo "PASS: opt/ directory exists"
+
       - name: Unit tests
         run: zig build test
 
@@ -53,6 +59,12 @@ jobs:
 
       - name: Smoke test
         run: ./zig-out/bin/nb help
+
+      - name: Test init creates opt/ directory
+        run: |
+          sudo ./zig-out/bin/nb init
+          test -d /opt/nanobrew/prefix/opt || (echo "FAIL: opt/ directory not created by nb init" && exit 1)
+          echo "PASS: opt/ directory exists"
 
       - name: Deb parity test
         run: bash tests/deb-parity.sh ./zig-out/bin/nb
